Fix mobile being stuck in popup

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -114,7 +114,7 @@ body{
     gap: 20px;
 }
 .overlay img{
-    max-width: 90vw;
+    max-width: 70vw;
     height: auto;
     width: auto;
     max-height: 90vh;
@@ -124,11 +124,6 @@ body{
     transition: transform 0.3s ease, opacity 0.3s ease;
 }
 
-@media only screen and (max-width: 600px) {
-    .overlay .img-container {
-        gap: 2rem;
-    }
-}
 
 @keyframes zoom-in {
     0% {
